example/lib/src/l10n/errors/app_ps.arb
{
  "@@locale": "ps",
  "error": "An error occurred",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "یو ناڅاپي تېروتنه رامنځته شوه",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "د خطا راپور په بریالیتوب سره لیږل شوی.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}